# Rift

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  rift.py
.github/workflows/: discord-commits.yml
cogs/: commands.py  developer.py  filter.py  jishaku.py  management.py  roblox.py  sessions.py.txt  setup.py  shifts.py.txt  tickets.py.txt
cogs/events/: on_command.py  on_command_error.py  on_guild_join.py  on_guild_remove.py  tasks.py
utils/: constants.py  embeds.py  modals.py  pagination.py  utils.py
