[project]
name = "rift"
version = "1.0.0"
description = ""
authors = [
    {name = "Nick Derry",email = "nickd@nexuresolutions.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "discord (==2.3.2)",
    "discord-py (==2.6.3)",
    "motor (==3.7.1)",
    "sentry-sdk (>=2.41.0,<3.0.0)",
    "python-dotenv (==1.1.1)",
    "jishaku (==2.6.0)",
    "discordutils (==1.3.4)",
    "requests (==2.32.5)",
    "shortuuid (==1.0.13)",
    "six (==1.17.0)",
    "pytz (==2025.2)",
    "aiohttp (==3.12.15)",
    "zuid (==0.1.1)",
    "cogwatch (==3.3.1)",
    "aiomysql (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
